# Custom-DL-Optimizer

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Custom_DL_Optimizer_Research_Colab.ipynb  LICENSE  MANIFEST.in  README.md  SECURITY.md  pyproject.toml  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: pages.yml  publish.yml  tests.yml
custom_dl_optimizer/: __init__.py  agent.py  cache.py  cli.py  config.py  integrations.py  optimizer.py  policy.py  providers.py  report.py  research.py  runtime.py  workload.py
custom_dl_optimizer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
custom_dl_optimizer/core/: __init__.py  engine.py  graph_surgeon.py  profiler.py  triton_kernels.py
docs/: agents.md  benchmarks.md  migration-v2.md  migration-v3.md  paper-launch.md  providers.md  publishing.md  research.md  usage.md  v3-release-checklist.md
examples/: agent_toolkit.py  benchmark_resnet.py  quickstart.py  workload_profile.py
site/: 404.html  guides.html  index.html  robots.txt  script.js  styles.css
tests/: test_package.py  test_v3_contracts.py
tools/: build_research_notebook.py  generate_site_demo.py  validate_research_notebook.py  validate_site.py
