[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-dl-optimizer"
version = "1.1.0"
description = "A regression-aware PyTorch inference optimizer using FX, Triton, and TorchInductor"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Devrajsinh Jhala" },
]
keywords = [
  "pytorch",
  "triton",
  "cuda",
  "deep-learning",
  "compiler",
  "inference",
  "optimization",
  "torch-fx",
  "torchinductor",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Compilers",
]
dependencies = [
  "torch>=2.1",
]

[project.optional-dependencies]
vision = ["torchvision>=0.16"]
dev = [
  "build>=1.0",
  "pytest>=7.0",
  "ruff>=0.9",
  "twine>=5.0",
]
research = [
  "matplotlib>=3.8",
  "pandas>=2.0",
  "seaborn>=0.13",
  "torchvision>=0.16",
]

[project.urls]
Homepage = "https://devrajsinh-jhala.github.io/Custom-DL-Optimizer/"
Documentation = "https://devrajsinh-jhala.github.io/Custom-DL-Optimizer/"
Repository = "https://github.com/Devrajsinh-Jhala/Custom-DL-Optimizer"
Issues = "https://github.com/Devrajsinh-Jhala/Custom-DL-Optimizer/issues"
Changelog = "https://github.com/Devrajsinh-Jhala/Custom-DL-Optimizer/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["custom_dl_optimizer*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
