[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "custom-dl-optimizer"
version = "3.0.0"
description = "Confidence-gated lifecycle selection for heterogeneous PyTorch inference plans"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  { name = "Devrajsinh Jhala" },
]
keywords = [
  "pytorch",
  "triton",
  "cuda",
  "deep-learning",
  "compiler",
  "inference",
  "optimization",
  "torch-fx",
  "torchinductor",
  "ai-agents",
  "benchmarking",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Compilers",
]
dependencies = [
  "torch>=2.1",
]

[project.scripts]
custom-dl-optimizer = "custom_dl_optimizer.cli:main"

[project.optional-dependencies]
vision = ["torchvision>=0.16"]
onnxruntime = ["onnx>=1.16", "onnxruntime>=1.18"]
onnxruntime-gpu = ["onnx>=1.16", "onnxruntime-gpu>=1.18"]
quantization = ["torchao>=0.10"]
dev = [
  "build>=1.0",
  "pytest>=7.0",
  "ruff>=0.9",
  "twine>=5.0",
]
research = [
  "matplotlib>=3.8",
  "pandas>=2.0",
  "seaborn>=0.13",
  "torchvision>=0.16",
]

[project.urls]
Homepage = "https://devrajsinh-jhala.github.io/Custom-DL-Optimizer/"
Documentation = "https://devrajsinh-jhala.github.io/Custom-DL-Optimizer/"
Repository = "https://github.com/Devrajsinh-Jhala/Custom-DL-Optimizer"
Issues = "https://github.com/Devrajsinh-Jhala/Custom-DL-Optimizer/issues"
Changelog = "https://github.com/Devrajsinh-Jhala/Custom-DL-Optimizer/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["custom_dl_optimizer*"]
exclude = ["tests*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["Custom_DL_Optimizer_Research_Colab.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]
